--- a/front/src/paginasE/PaginasE.css
+++ b/front/src/paginasE/PaginasE.css
@@ -21,6 +21,7 @@
   font-weight: bold;
   color: black;
   margin-bottom: 0.5rem;
+  text-align: center;
 }
 
 .dashboard-content {
@@ -189,7 +190,7 @@ tr:hover {
 .info-extra {
   margin-top: 20px;
   background-color: #f0f0f0;
-  padding: 20px;
+  padding: 10px;
   border-radius: 10px;
 }
 
@@ -198,6 +199,7 @@ tr:hover {
   border-radius: 12px;
   padding: 30px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  width: 80%;
 }
 
 .campo-textarea {
