--- a/front/src/paginasS/ModalPostulacion.module.css
+++ b/front/src/paginasS/ModalPostulacion.module.css
@@ -34,4 +34,24 @@
     padding: 5px 10px;
     cursor: pointer;
   }
-  
+
+  .buttonContainer {
+  display: flex;
+  gap: 10px; /* separa los botones */
+}
+
+.aceptarButton {
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.rechazarButton {
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
